[metadata]
name = takahe3
author = Florian Boudin, Ben Montgomery
summary = Multi-sentence compression package
license = MIT
description-file =
    README.md
description-content-type = text/markdown
requires-python = >=3.5.1
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    takahe3